cmake_minimum_required(VERSION 3.9)
project(AdventOfCode18)

set(CMAKE_CXX_STANDARD 17)

add_executable(Day01a 01a.cpp)
add_executable(Day01b 01b.cpp)
add_executable(Day02a 02a.cpp)
add_executable(Day02b 02b.cpp)
add_executable(Day03a 03a.cpp)
add_executable(Day03b 03b.cpp)
add_executable(Day04a 04a.cpp)
add_executable(Day04b 04b.cpp)
add_executable(Day05a 05a.cpp)
add_executable(Day05b 05b.cpp)